# cs50p

./: .gitignore  .pre-commit-config.yaml  README.md  cs50p.sublime-project  cs50p.sublime-workspace  cs50p.wpr  cs50p.wpu  pyproject.toml  test
adieu/: adieu.py
camel/: camel.py
fuel/: fuel.py
nutrition/: nutrition.sublime-project  nutrition.sublime-workspace
src/: __main__.py
src/adieu/: adieu.py
src/bank/: bank.py
src/bitcoin/: bitcoin.py
src/deep/: deep.py
src/emojize/: emojize.py
src/extensions/: extensions.py
src/figlet/: figlet.py
src/fuel/: fuel.py
src/game/: game.py
src/grocery/: grocery.py
src/interpreter/: interpreter.py
src/lines/: lines.py  test.py
src/meal/: meal.py
src/numb3rs/: numb3rs.py  test_numb3rs.py
src/nutrition/: nutrition.py
src/outdated/: outdated.py
src/pizza/: pizza.py
src/plates/: plates.py
src/professor/: np.py  professor.py
src/response/: response.py
src/scourgify/: sourgify.py
src/shirt/: shirt.py
src/test_bank/: bank.py  test_bank.py
src/test_fuel/: fuel.py  test_fuel.py
src/test_plates/: plates.py  test_plates.py
src/test_twttr/: test_twttr.py  twttr.py
src/um/: um.py
src/watch/: watch.py
src/working/: test_working.py  working.py
src6/: students11.py  students8.py  students9.py
taqueria/: taqueria.py
